Added clear selection button :

--- a/documentation/partials/examples/_examples.pug
+++ b/documentation/partials/examples/_examples.pug
@@ -93,6 +93,10 @@
 
       This options can only be enabled if `taggable` is set to `false`.
     +example('Alphanumeric')
+  +subsection('Clear selection button')
+    :markdown-it
+      You can use `show-clear-button` to add a button to clear the currently selected item.
+    +example('ClearSelectionButton')
   +subsection('Vuex support')
     :markdown-it
       Due to the one-way data-flow enforced by Vuex you should not be using `v-model` for manipulating the currently selected value.
